Squashed release-1.3.12-pre02
commit 8a019f3c49631ed122e9e2028bbae5c302d80d13
Author: Felix Natter <fnatter@gmx.net>
Date:   Sat Jul 26 11:48:26 2014 +0200

    JSyntaxPane: Fix a javascript problem with java8 (error popup when starting the formula editor)

commit c948ff48f42f841f52e759d04bcb769e34785c73
Author: dpolivaev <dpolivaev>
Date:   Tue Jul 22 20:42:01 2014 +0200

    universalJavaApplicationStub update

commit 7172a7029e5229ffbdbeacd313e19dd79a5d9696
Author: Felix Natter <fnatter@gmx.net>
Date:   Thu Jul 17 20:37:28 2014 +0200

    ant format-translation after weblate pull

commit 6e6f71f16d3becc284bae98cfadb670989aa2c3c
Merge: 3db923f 14e124b
Author: Weblate <noreply@weblate.org>
Date:   Thu Jul 17 20:25:57 2014 +0200

    Merge remote-tracking branch 'origin/1.3.x' into 1.3.x

commit 3db923f7337cab8cb760469ee3287cc666950fb6
Author: János Néhrer <iiamnot@gmail.com>
Date:   Wed Jul 16 15:15:06 2014 +0200

    Translated using Weblate (Hungarian)

    Currently translated at 98.4% (1782 of 1810 strings)

commit ec28bcfeddf1a59c100afc2575de7a6b73b14efd
Author: jan madsen <jsm@janz.dk>
Date:   Thu Jul 17 19:35:13 2014 +0200

    Translated using Weblate (Danish)

    Currently translated at 100.0% (1810 of 1810 strings)

commit 5124b79e9b2bcd017a321326a2b8c70c1093f90a
Author: josep constanti <jconstanti@ovi.com>
Date:   Thu Jul 17 08:16:21 2014 +0200

    Translated using Weblate (Catalan)

    Currently translated at 31.8% (577 of 1810 strings)

commit 14e124b277ea72562acebd9387c6d700f36c73f2
Author: Felix Natter <fnatter@gmx.net>
Date:   Thu Jul 17 20:24:33 2014 +0200

    add LaTeX beamer export filter, thanks to Igor Garcia Olaizola

commit c00591d31c9ec72de2ea5013fa5a4b37a8403c17
Author: jan madsen <jsm@janz.dk>
Date:   Thu Jul 17 10:14:08 2014 +0200

    Translated using Weblate (Danish)

    Currently translated at 100.0% (1810 of 1810 strings)

commit 96af2c482371346699f59ed3c33cf90717028571
Author: atus42 <kadar.attila@mithrandir.hu>
Date:   Wed Jul 

--- a/freeplane/resources/translations/Resources_ca.properties
+++ b/freeplane/resources/translations/Resources_ca.properties
@@ -1,5 +1,9 @@
+about_text=Freeplane - Programa lliure per construir mapes conceptuals i de coneixement
 AboutAction.text=Quant a
 acceleratorPresets=Hot Key Presets[translate me]
+accelerators_loading_error=No es pot carregar els acceleradors des {0}
+accessories/plugins/ApplyFormatPlugin.dialog.title=Canviar format de nodes
+accessories/plugins/AutomaticLayout.properties_StyleDialogTitle=Canviar mostra
 accessories/plugins/EncryptNode.properties_0=Trieu una paraula de pas pel node xifrat
 accessories/plugins/EncryptNode.properties_1=Les paraules de pas no s\u00F3n iguals o s\u00F3n massa curtes.
 accessories/plugins/EncryptNode.properties_2=Introdu\u00EFu la paraula de pas:
@@ -11,6 +15,8 @@ accessories/plugins/EncryptNode.properties_7=Cancel\u00B7la
 accessories/plugins/EncryptNode.properties_insert_encrypted_node_first=Nom\u00E9s \u00E9s possible alternar entre l'estat de xifratge pels nodes que es trobin xifrats. Si us plau inseriu un node d'aquest tipus mitjan\u00E7ant el men\u00FA d'eines.
 accessories/plugins/EncryptNode.properties_select_me=Trieu-me per continuar!
 accessories/plugins/EncryptNode.properties_wrong_password=La paraula de pas no \u00E9s correcta.
+accessories/plugins/ExportWithTWiki.text=TWiki\u2026
+accessories/plugins/ExportWithTWiki.tooltip=Exporta el mapa com un document TWiki.
 accessories/plugins/ExportWithXSLT.tooltip=Aquest \u00E9s un m\u00E8tode d'exportaci\u00F3 utilitzant comandes XSLT.
 accessories/plugins/ExportWithXSLT_Applet.text=Com un Applet Java...
 accessories/plugins/ExportWithXSLT_Applet.tooltip=Exporta el mapa com un applet java pel navegador.
@@ -18,7 +24,32 @@ accessories/plugins/ExportWithXSLT_Flash.text=Com a Flash...
 accessories/plugins/ExportWithXSLT_Flash.tooltip=Exporta com una aplicaci\u00F3 Flash.
 accessories/plugins/ExportWithXSLT_HTML.text=Com a XHTML (versi\u00F3 JavaScript)...
 accessories/plugins/ExportWithXSLT_HTML3.text=Com a XHTML (Mapa amb imatge)...
+accessories/plugins/ExportWithXSLT_RESOURCESTJI.text=Recursos del node RECURSOS verd un arxiu TaskJuggler\u2026
+accessories/plugins/ExportWithXSLT_RESOURCESTJI.tooltip=<html>Exporta recursos del node RECURSOS vers el m\u00F2dul Taskjuggler. </html>
+accessories/plugins/ExportWithXSLT_TASKSTJI.text=Tasques del node de TASQUES al fitxer TaskJuggler ...
+accessories/plugins/ExportWithXSLT_TASKSTJI.tooltip=<html>Exporta tasques del node TASQUES al m\u00F2dul Taskjuggler. </html>
+action_keystroke_in_use_error=La tecla {0} seleccionada per l''acci\u00F3 {1} ja s''associa a l''acci\u00F3 {2}
+active=Activar
+actual_map_styles=Estils condicionals del mapa aplicats al node
+actual_node_styles=Estils condicionals del node aplicats al node
+add=&Afegir
+AddConnectorAction.text=Connectar
+AddElementaryConditionAction.text=Afegir
 AddLocalLinkAction.text=Afegeix un hiperenlla\u00E7 local
+AddMenuItemLinkAction.text=Afegeix hiperenlla\u00E7 com opci\u00F3 de men\u00FA\u2026
+AddOnDetailsPanel.authored.by=Per {0}
+AddOnDetailsPanel.header.function=Funci\u00F3
+AddOnDetailsPanel.header.menu=Posici\u00F3 al men\u00FA
+AddOnDetailsPanel.header.shortcut=Drecera
+AddOnDetailsPanel.homepage=P\u00E0gina d'inici:
+addons.installer.canceled=Instal\u00B7laci\u00F3 anulada
+addons.installer.confirm.licence=<html><body><h1>Llic\u00E8ncia</h1>{0}<p><p><em>Accepta aquesta llic\u00E8ncia?</em></p></body></html>
+addons.installer.failed=Instal\u00B7laci\u00F3 fallida: {0}
+addons.installer.freeplaneversion.format.error=Error al format de {0} (valor: {1})
+addons.installer.html.script=El contingut del script no pot tenir format HTML
+addons.installer.install=Instal\u00B7lar
+addons.installer.invalid.keyboard.shortcut=Drecera incorrecta {0}.
+addons.installer.licence.unchanged=La llic\u00E8ncia no s'ha modificat
 antialias_all=Anti\u00E0lies a Tots
 antialias_edges=Anti\u00E0lies als Cantells
 antialias_none=Sense anti\u00E0lies
@@ -93,7 +124,7 @@ error_creating_directory=No es pot crear el directori per a exportar.
 ExecuteScripts.text=Scripts[translate me]
 export_pdf_text=Format de Document Portable(PDF)
 export_svg_text=Gr\u00E0fic Vectorial Escalable (SVG)
-ExportAction.text=Exporta
+ExportAction.text=&Exporta mapa\u2026
 ExportBranchToHTMLAction.text=Branca com HTML
 ExportPdf.text=Com a PDF...
 ExportSvg.text=Com a SVG...
@@ -257,7 +288,7 @@ NewSiblingAction.text=Crea un Node Germ\u00E0
 no=No
 no_format_copy_before_format_paste=No podeu enganxar un format sense haver-ne copiat pr\u00E8viament un.
 no_found_from=No s''ha trobat "{0}" a "{1}".
-no_more_found_from=No s''han trobat m\u00E9s "{0}" a "{1}".
+no_more_found_from=<html>Cap m\u00E9s <u>{0}</u> trobat de "{1}".</html>
 no_previous_find=No hi ha res a cercar pr\u00E8viament.
 node=Node
 node_changed_discard_changes=Heu canviat el node. Voleu descartar-ne els canvis?
@@ -478,7 +509,7 @@ repair_link=Repara l'enlla\u00E7
 repair_link_question=No ha estat possible carregar el mapa enlla\u00E7at. Voleu reparar-lo manualment?
 ResetNodeLocationAction.text=Restaura la posici\u00F3
 save_failed=Hi ha hagut un error en intentar desar el mapa {0}.
-save_unsaved=Voleu desar el mapa seg\u00FCent? :
+save_unsaved=Voleu desar el mapa seg\u00FCent?
 SaveAction.text=Desa
 SaveAsAction.text=Desa com...
 saved=Desat
@@ -493,7 +524,7 @@ selection_method_direct=Puntejar per a seleccionar
 SetImageByFileChooserAction.text=Imatge (Trieu un fitxer o enlla\u00E7)...
 SetLinkByFileChooserAction.text=Hiperenlla\u00E7 (Trieu un fitxer)...
 SetLinkByTextFieldAction.text=Hipernella\u00E7 (Quadre de text)...
-simplyhtml.borderColorLabel=Color\:[translate me]
+simplyhtml.borderColorLabel=Color:[translate me]
 simplyhtml.borderWidthLabel=Amplada
 simplyhtml.cancelBtnName=Cancel\u00B7la
 simplyhtml.cellGenTabLabel=General[translate me]
