--- a/freeplane/resources/translations/Resources_cs.properties
+++ b/freeplane/resources/translations/Resources_cs.properties
@@ -1,29 +1,29 @@
-about_text=Freeplane - svobodn\u00FD program pro tvo\u0159en\u00ED my\u0161lenkov\u00FDch map a datab\u00E1ze znalost\u00ED
+about_text=Freeplane - svobodn\u00FD program pro tvo\u0159en\u00ED my\u0161lenkov\u00FDch map a znalostn\u00EDch datab\u00E1z\u00ED
 AboutAction.text=O programu
-acceleratorPresets=Hot Key Presets[translate me]
+acceleratorPresets=Nastaven\u00ED "hork\u00FDch" kl\u00E1ves
 accelerators_loading_error=Nelze na\u010D\u00EDst akceler\u00E1tory z {0}
 accessories/plugins/ApplyFormatPlugin.dialog.title=Zm\u011Bna form\u00E1tu uzl\u016F
 accessories/plugins/AutomaticLayout.properties_StyleDialogTitle=Zm\u011Bnit vzor
-accessories/plugins/EncryptNode.properties_0=Vyberte heslo pro zak\u00F3dovan\u00FD uzel
-accessories/plugins/EncryptNode.properties_1=Hesla nejsou stejn\u00E1, nebo jsou p\u0159\u00EDli\u0161 kr\u00E1tk\u00E1.
+accessories/plugins/EncryptNode.properties_0=Vyberte heslo pro zak\u00F3dov\u00E1n\u00ED uzlu
+accessories/plugins/EncryptNode.properties_1=Hesla nejsou stejn\u00E1 nebo jsou p\u0159\u00EDli\u0161 kr\u00E1tk\u00E1.
 accessories/plugins/EncryptNode.properties_2=Vlo\u017Ete heslo:
 accessories/plugins/EncryptNode.properties_3=Znovu vlo\u017Ete heslo:
 accessories/plugins/EncryptNode.properties_4=Vlo\u017Ete Va\u0161e heslo.
-accessories/plugins/EncryptNode.properties_5=<html>Pamatujte, \u017Ee s\u00EDla zak\u00F3dov\u00E1n\u00ED<br> z\u00E1vis\u00ED p\u0159edev\u0161\u00EDm na kvalit\u011B Va\u0161eho hesla.
+accessories/plugins/EncryptNode.properties_5=<html>Pamatujte, \u017Ee s\u00EDla zak\u00F3dov\u00E1n\u00ED<br> z\u00E1vis\u00ED skoro \u00FApln\u011B na kvalit\u011B Va\u0161eho hesla.
 accessories/plugins/EncryptNode.properties_6=OK
 accessories/plugins/EncryptNode.properties_7=Storno
 accessories/plugins/EncryptNode.properties_insert_encrypted_node_first=M\u016F\u017Eete p\u0159epnout do stavu ochrany heslem (zak\u00F3dov\u00E1n\u00ED) pouze u zak\u00F3dovan\u00E9ho uzlu. Takov\u00FD uzel m\u016F\u017Eete vlo\u017Eit pomoc\u00ED menu N\u00E1stroje.
-accessories/plugins/EncryptNode.properties_select_me=Vybrat pro pokra\u010Dov\u00E1n\u00ED!
+accessories/plugins/EncryptNode.properties_select_me=Vyberte mn\u011B pro pokra\u010Dov\u00E1n\u00ED!
 accessories/plugins/EncryptNode.properties_wrong_password=Heslo nen\u00ED spr\u00E1vn\u00E9.
 accessories/plugins/ExportWithTWiki.text=TWiki ...
 accessories/plugins/ExportWithTWiki.tooltip=Exportuje mapu jako TWiki dokument.
-accessories/plugins/ExportWithXSLT.tooltip=Export s pou\u017Eit\u00EDm XSLT skript\u016F.
-accessories/plugins/ExportWithXSLT_Applet.text=Jako Java Applet...
-accessories/plugins/ExportWithXSLT_Applet.tooltip=Exportuje mapu jako java browser applet.
-accessories/plugins/ExportWithXSLT_Flash.text=Jako Flash...
+accessories/plugins/ExportWithXSLT.tooltip=Toto je jednotn\u00E1 exportn\u00ED metoda.
+accessories/plugins/ExportWithXSLT_Applet.text=Java Applet...
+accessories/plugins/ExportWithXSLT_Applet.tooltip=Exportuje mapu jako applet prohl\u00ED\u017Ee\u010De java.
+accessories/plugins/ExportWithXSLT_Flash.text=Flash...
 accessories/plugins/ExportWithXSLT_Flash.tooltip=Exportuje mapu jako flash aplikaci.
-accessories/plugins/ExportWithXSLT_HTML.text=Jako XHTML (JavaScript verze)...
-accessories/plugins/ExportWithXSLT_HTML3.text=Jako XHTML (verze s klikac\u00ED mapou)...
+accessories/plugins/ExportWithXSLT_HTML.text=XHTML (JavaScript verze)...
+accessories/plugins/ExportWithXSLT_HTML3.text=XHTML (verze s klikac\u00ED mapou)...
 accessories/plugins/ExportWithXSLT_RESOURCESTJI.text=Zdroje z uzlu RESOURCES do souboru Taskjuggler...
 accessories/plugins/ExportWithXSLT_RESOURCESTJI.tooltip=<html>Exportuje zdroje z uzlu RESOURCES do modulu Taskjuggler. </html>
 accessories/plugins/ExportWithXSLT_TASKSTJI.text=\u00DAkoly z uzlu TASKS do Taskjuggler souboru...
@@ -32,7 +32,7 @@ action_keystroke_in_use_error=Kl\u00E1vesov\u00E1 zkratka {0} \u017E\u00E1dan\u0
 active=Aktivn\u00ED
 actual_map_styles=Podm\u00EDn\u011Bn\u00E9 styly map byly aplikov\u00E1ny na uzel
 actual_node_styles=Podm\u00EDn\u011Bn\u00E9 styly uzlu byly aplikov\u00E1ny na uzel
-add=P\u0159id&at
+add=&P\u0159idat
 AddConnectorAction.text=P\u0159ipojit
 AddElementaryConditionAction.text=P\u0159idat
 AddLocalLinkAction.text=P\u0159idat lok\u00E1ln\u00ED hyperlink
@@ -861,15 +861,30 @@ NodeListAction.tooltip=Uk\u00E1\u017Ee v\u0161echny uzly jako prohledateln\u00FD
 NodeShapeAction.bubble.text=Bublina
 NodeShapeAction.fork.text=Rozdvojen\u00ED
 NodeUpAction.text=Uzel nahoru
+NodeWidthAction.text=Nastav hranice \u0161\u00ED\u0159ky bu\u0148ky
 nonboldify_branch=Zru\u0161it tu\u010Dn\u00E9
 nonitalicise_branch=Zru\u0161it kurz\u00EDvu
 normal=Norm\u00E1ln\u00ED
+not_saved_for_image_error=Mapa mus\u00ED b\u00FDt ulo\u017Eena p\u0159ed t\u00EDm, ne\u017E budete moci vybrat obr\u00E1zek spr\u00E1vcem soubor\u016F
 not_saved_for_link_error=Mapa mus\u00ED b\u00FDt ulo\u017Eena p\u0159ed nastaven\u00EDm odkazu pomoc\u00ED v\u00FDb\u011Bru souboru
+note_window_location=Um\u00EDst\u011Bn\u00ED pozn\u00E1mkov\u00E9ho panelu
 ok=OK
 OKAction.text=OK
+OnlineReference.text=Online mapy dokumentace
+open_asMindMap=my\u0161lenkov\u00E1 mapa
 OpenAction.text=Otev\u0159\u00EDt...
+OpenFreeplaneSiteAction.text=Domovsk\u00E9 str\u00E1nky Freeplane
+OpenMapsAddLocation.text=P\u0159idat um\u00EDst\u011Bn\u00ED map k otev\u0159en\u00ED...
+OpenMapsRemoveLocation.text=Odstranit um\u00EDst\u011Bn\u00ED map k otev\u0159en\u00ED
+OpenMapsViewLocation.text=Zobrazit um\u00EDst\u011Bn\u00ED map k otev\u0159en\u00ED...
 OpenPathAction.text=Open File[translate me]
+OpenURLMapAction.text=Otev\u0159\u00EDt mapu z URL...
+OpenUserDirAction.text=Otev\u0159\u00EDt u\u017Eivatelsk\u00FD adres\u00E1\u0159
 option_changes_may_require_restart=Pro projeven\u00ED zm\u011Bn budete pravd\u011Bpodobn\u011B muset restartovat Freeplane.
+OptionalDontShowMeAgainDialog.cancel=Ne
+OptionalDontShowMeAgainDialog.dontShowAgain=U\u017E se mn\u011B v\u00EDce neptej.
+OptionalDontShowMeAgainDialog.ok=Ano
+OptionalDontShowMeAgainDialog.rememberMyDescision=Zapamatuj si m\u016Fj v\u00FDb\u011Br.
 OptionPanel.absolute=Absolutn\u00ED
 OptionPanel.accessories/plugins/AutomaticLayout.properties_PatternTabName=Automatick\u00E9 rozvr\u017Een\u00ED vzor\u016F
 OptionPanel.antialias=Vyhlazov\u00E1n\u00ED
@@ -1139,6 +1154,7 @@ PatternToString.FontBold=Tu\u010Dn\u011B
 PatternToString.FontName=Font Name[translate me]
 PatternToString.Icon=Ikona
 PatternToString.NodeFontSize=Velikost p\u00EDsma
+PeriodUnit.DAY=dn\u016F
 plugins/ScriptEditor.exit=Konec
 plugins/ScriptEditor.menu_actions=Akce
 plugins/ScriptEditor.new_script=New Script[translate me]
@@ -1429,6 +1445,7 @@ ViewLayoutTypeAction.OUTLINE.text=Zobrazit jako osnovu
 WebDocuAction.text=Webov\u00E1 dokumentace
 width=\u0160\u00ED\u0159ka
 xslt_export.text=Prost\u00FD text
+xslt_export_not_possible=Export Freeplane XSLT nen\u00ED mo\u017En\u00FD
 yes=Ano
 ZoomInAction.text=P\u0159ibl\u00ED\u017Eit
 ZoomOutAction.text=Odd\u00E1lit
