--- a/freeplane/resources/translations/Resources_pt_BR.properties
+++ b/freeplane/resources/translations/Resources_pt_BR.properties
@@ -1,6 +1,6 @@
-about_text=Freeplane - Software livre para mapeamento de id\u00E9ias e constru\u00E7\u00E3o do conhecimento
+about_text=Freeplane - Software livre de mapeamento de id\u00E9ias e constru\u00E7\u00E3o do conhecimento
 AboutAction.text=Sobre
-acceleratorPresets=Predefini\u00E7\u00F5es de teclas de atalho
+acceleratorPresets=Definir teclas de atalho
 accelerators_loading_error=N\u00E3o \u00E9 poss\u00EDvel carregar os aceleradores de {0}
 accessories/plugins/ApplyFormatPlugin.dialog.title=Alterar o formato de n\u00F3s
 accessories/plugins/AutomaticLayout.properties_StyleDialogTitle=Alterar padr\u00E3o
@@ -907,50 +907,50 @@ OptionPanel.antialias_none=Sem suaviza\u00E7\u00E3o
 OptionPanel.Appearance=Apar\u00EAncia
 OptionPanel.apply_system_screen_resolution=Aplicar a resolu\u00E7\u00E3o de tela padr\u00E3o do sistema
 OptionPanel.approximate_search_threshold=princ\u00EDpio de correspond\u00EAncia aproximada
-OptionPanel.approximate_search_threshold.tooltip=<html>Limite para correspond\u00EAncia aproximada<br/><font size="2">consulte http://freeplane.sf.net/wiki/index.php/Approximate_search</font><br/>(quanto maior as varia\u00E7\u00F5es menor<br/>ser\u00E1 o termo encontrado)</html>
+OptionPanel.approximate_search_threshold.tooltip=<html>Limite para correspond\u00EAncia aproximada<br/><font size="2">consulte http://freeplane.sf.net/wiki/index.php/Approximate_search</font><br/>(quanto maior a varia\u00E7\u00E3o menor<br/>ser\u00E1 o termo encontrado)</html>
 OptionPanel.ar=\u00C1rabe
 OptionPanel.ARC=Arco
 OptionPanel.as_parent=Como pai
 OptionPanel.ask=Perguntar
 OptionPanel.automatic=Autom\u00E1tico
-OptionPanel.automaticFormat_level=Estilos de layout autom\u00E1tico
-OptionPanel.automaticFormat_level1=Formata\u00E7\u00E3o do n\u00F3 raiz
-OptionPanel.automaticFormat_level2=Formata n\u00F3s do primeiro n\u00EDvel
+OptionPanel.automaticFormat_level=Aplicar estilos de n\u00EDvel
+OptionPanel.automaticFormat_level1=Formata\u00E7\u00E3o n\u00F3 raiz
+OptionPanel.automaticFormat_level2=N\u00F3 formato de primeiro n\u00EDvel
 OptionPanel.backup_file_number=N\u00FAmero de arquivos de backup retidos
 OptionPanel.Behaviour=Comportamento
-OptionPanel.bezier=Curva suave (bezier)
+OptionPanel.bezier=Curva suave (b\u00E9zier)
 OptionPanel.bubble=Bolha
-OptionPanel.ca=Catalan, Valencian/Catal\u00E0
+OptionPanel.ca=Catal\u00E3, Valenciano/Catal\u00E3o
 OptionPanel.Cancel=Cancelar
 OptionPanel.center_selected_node=Centralizar o n\u00F3 selecionado automaticamente
 OptionPanel.check_updates_automatically=Verificar atualiza\u00E7\u00F5es ao iniciar o programa
-OptionPanel.childpattern=Padr\u00E3o do filho
-OptionPanel.childpattern.tooltip=O padr\u00E3o selecionado ser\u00E1 aplicado para todos os filhos.
-OptionPanel.clear_all_setters=Muda todos
+OptionPanel.childpattern=Padr\u00E3o filho
+OptionPanel.childpattern.tooltip=O pai selecionado ser\u00E1 aplicado para todos os filhos.
+OptionPanel.clear_all_setters=Mudar todos
 OptionPanel.clear_all_setters.tooltip=Ativa ou desativa todas as indica\u00E7\u00F5es de mudan\u00E7a.
 OptionPanel.cloud=Nuvem
 OptionPanel.cloudcolor=Cor da nuvem
 OptionPanel.cloudshape=Forma da nuvem
-OptionPanel.combined=Combinedo
-OptionPanel.compare_as_number=Compare os n\u00FAmeros
-OptionPanel.convert_to_current_version=<html>Automaticamente converta mapas de versoes antigas do Freeplane<br> para a versao atual?</html>
-OptionPanel.convert_to_current_version.tooltip=<html>Apenas para mapas grandes que nao precisam ser convertidos <br>(este e um conhecimento de expert) voc\u00EA pode abrir os mapas sem converte-los.</html>
-OptionPanel.cs=Cs
-OptionPanel.cut_nodes_without_question=Cortar os n\u00F3s sem confirma\u00E7\u00E3o?
-OptionPanel.cut_nodes_without_question.tooltip=Se esta caixa de marca\u00E7\u00E3o for selecionada, os n\u00F3s s\u00E3o cortados sem confirma\u00E7\u00E3o. Isto poder\u00E1 causar perda de informa\u00E7\u00F5es, se acontecer acidentalmente.
-OptionPanel.da=Dk
+OptionPanel.combined=Combinado
+OptionPanel.compare_as_number=Comparar uns n\u00FAmeros
+OptionPanel.convert_to_current_version=<html>Automaticamente converter mapas de vers\u00F5es antigas do Freeplane<br> para a vers\u00E3o atual?</html>
+OptionPanel.convert_to_current_version.tooltip=<html>Apenas para mapas grandes que n\u00E3o precisam ser convertidas <br>(este \u00E9 um conhecimento de expert) voc\u00EA pode abrir os mapas sem convert\u00EA-los.</html>
+OptionPanel.cs=Tcheco
+OptionPanel.cut_nodes_without_question=Cortar os n\u00F3s sem confirmar?
+OptionPanel.cut_nodes_without_question.tooltip=Se esta caixa de marca\u00E7\u00E3o for selecionada, os n\u00F3s ser\u00E3o cortados sem confirma\u00E7\u00E3o. Isto poder\u00E1 causar perda de informa\u00E7\u00F5es, caso acontecer acidentalmente.
+OptionPanel.da=Dinamarca
 OptionPanel.date_format=Formato de data padr\u00E3o
-OptionPanel.date_format.tooltip=CURTO, M\u00C9DIO, LONGO, INTEIRO ou um PADR\u00C3O como "MM/dd/yyyy"
+OptionPanel.date_format.tooltip=CURTO, M\u00C9DIO, LONGO, INTEIRO ou PADR\u00C3O como "MM/dd/yyyy"
 OptionPanel.datetime_format=Formato de data e hora padr\u00E3o
 OptionPanel.datetime_format.tooltip=<datestyle>,<timestyle> (estilo CURTO, M\u00C9DIO, LONGO ou INTEIRO) ou um padr\u00E3o inteiro como  "M/d/yyyy hh:mm"
-OptionPanel.de=De
+OptionPanel.de=Alemanha
 OptionPanel.default=Padr\u00E3o
 OptionPanel.default_attribute_key_column_width=Atributo padr\u00E3o de largura de chave
-OptionPanel.default_attribute_value_column_width=Valor padr\u00E3o do atributo de largura
-OptionPanel.default_browser_command_mac=Comando padr\u00E3o para o browser no MacOS
+OptionPanel.default_attribute_value_column_width=Atributo padr\u00E3o valor de largura
+OptionPanel.default_browser_command_mac=Comando padr\u00E3o do Mac para browser
 OptionPanel.default_browser_command_mac.tooltip=<html> e para o MAC: (gra\u00E7as ao Nick!)</html>
 OptionPanel.default_browser_command_other_os=Comando padr\u00E3o para o browser em outros sistemas operacionais
-OptionPanel.default_browser_command_other_os.tooltip=<html> Este \u00E9 o que deve ser usado para o Linux:</html>
+OptionPanel.default_browser_command_other_os.tooltip=<html> Este \u00E9 tipicamente Linux:</html>
 OptionPanel.default_browser_command_windows_9x=Comando padr\u00E3o para o browser no Windows 9x
 OptionPanel.default_browser_command_windows_9x.tooltip=<html>Para o Windows (as aspas ("") s\u00E3o necess\u00E1rias para links que tem "=" em suas URLs).</html>
 OptionPanel.default_browser_command_windows_nt=Comando padr\u00E3o para o browser no Windows NT
