--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -1290,7 +1290,7 @@ OptionPanel.toolTipManager.initialDelay=Anf\u00E4ngliche Verz\u00F6gerung (in Mi
 OptionPanel.toolTipManager.max_tooltip_width=Maximale Anzeigebreite f\u00FCr ToolTips
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>Legt die maximale Breite der Tooltips in Pixeln fest.</html>
 OptionPanel.toolTipManager.reshowDelay=Verz\u00F6gerung zur erneuten Anzeige (in Millisekunden)
-OptionPanel.tr=T\u00FCrkisch / T\u00FCrkmen, \u0422\u04AF\u0440\u043A\u043C\u0435\u043D
+OptionPanel.tr=T\u00FCrkisch / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=Ukrainisch / \u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
 OptionPanel.undefined_font=Unbekannte Schriftart
 OptionPanel.undo_levels=Anzahl widerrufbarer Aktionen
