--- a/freeplane/resources/translations/Resources_nl.properties
+++ b/freeplane/resources/translations/Resources_nl.properties
@@ -1291,7 +1291,7 @@ OptionPanel.toolTipManager.initialDelay=Beginvertraging, ms
 OptionPanel.toolTipManager.max_tooltip_width=Breedte tooltip
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html> De standaardbreedte van de tooltip in pixels,</html>
 OptionPanel.toolTipManager.reshowDelay=Vertraging in het opnieuw laten zien, ms
-OptionPanel.tr=Turks, / T\u00FCrkmen
+OptionPanel.tr=Turks
 OptionPanel.uk_UA=Ukrainisch /  \u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
 OptionPanel.undefined_font=Niet-gedefinieerd lettertype
 OptionPanel.undo_levels=Aantal stappen
