--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1290,7 +1290,7 @@ OptionPanel.toolTipManager.initialDelay=Initial delay, ms
 OptionPanel.toolTipManager.max_tooltip_width=Node tool tip width
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>The default tooltip width in pixels.</html>
 OptionPanel.toolTipManager.reshowDelay=Reshow delay, ms
-OptionPanel.tr=Turkmen / T\u00fcrkmen, \u0422\u04af\u0440\u043a\u043c\u0435\u043d
+OptionPanel.tr=Turkish / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=Ukrainian / \u0423\u043a\u0440\u0430\u0457\u043d\u0441\u044c\u043a\u0430
 OptionPanel.undefined_font=Undefined font
 OptionPanel.undo_levels=Undo levels
