Squashed release-1.3.16-pre04
commit de9c2a61e8a9b5c73877c860db18de91eaf0e77f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 20 17:53:12 2015 +0200

    rename method (typo)

commit 7d4d462254db98f3089331dad25248394940448d
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 17:52:04 2015 +0200

    Save MAX_WIDTH along with MAX_WIDTH_QUANTITY and MIN_WIDTH along with
    MIN_WIDTH_QUANTITY for backward compatibility

commit 156aa578160fc6a50a91f88c2624e5ab11c0f054
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 20 15:56:00 2015 +0200

    remove NodeWidth action from menus

commit 885cac0d16be0b7834349d7e6420e502c220b783
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 20 15:46:11 2015 +0200

    QuantityProperty for node widths
    # Conflicts:
    #	freeplane/resources/xml/mindmapmode.generic.xml
    #	freeplane/resources/xml/mindmapmoderibbon.xml
    #	freeplane/resources/xml/stylemode.generic.xml
    #	freeplane/resources/xml/stylemodemenu.xml
    #	freeplane/src/main/java/org/freeplane/view/swing/map/ContentSizeCalculator.java
    #	freeplane/src/org/freeplane/features/nodestyle/NodeStyleBuilder.java
    #	freeplane/src/org/freeplane/features/nodestyle/mindmapmode/NodeSizeDialog.java
    #	freeplane/src/org/freeplane/features/nodestyle/mindmapmode/NodeWidthAction.java
    #	freeplane/src/org/freeplane/features/styles/mindmapmode/StyleEditorPanel.java

commit 0e4d20ba300d757033da955359a6ef977287aacb
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 14:33:20 2015 +0200

    QuantityProperty for node widths

commit 3404320817a10d7f83cec3e13b474150d1c0c932
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 13:13:27 2015 +0200

    Use Quantity<LengthUnits> in NodeSizeModel

commit 88945313d74b139f7d5caa0700ba1a6fdce393b8
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 12:53:46 2015 +0200

    Convert Quantity to and from String

commit 8f17a94b3ffa589c1df669a7a3b7ce79fda85e6b
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 12:32:23 2

--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -674,6 +674,10 @@ LatexInsertLatexAction.msg1=<html>You are trying to insert a <i>legacy</i> LaTeX
 LatexInsertLatexAction.msg2=<html>In short: <ul><li>use a "\\latex " prefix in node text or</li><li><i>View->Properties panel</i>, then <i>Core text->Format->Latex</i></li></ul></html>
 LatexInsertLatexAction.text=Add &LaTeX formula...
 latexPatternFormat=LaTeX
+LengthUnits.cm=cm
+LengthUnits.in=in
+LengthUnits.mm=mm
+LengthUnits.px=px
 less_than_two_selected_nodes=You have to select at least two nodes to get links.
 license=License: GPL 2 or later
 license_text=<html>This program is free software; you can redistribute it and/or<br>modify it under the terms of the GNU General Public License<br>as published by the Free Software Foundation; either version 2<br>of the License, or (at your option) any later version.<br><br>This program is distributed in the hope that it will be useful,<br>but WITHOUT ANY WARRANTY; without even the implied warranty of<br>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>GNU General Public License for more details.<br><br>You should have received a copy of the GNU General Public License<br>along with this program; if not, write to the Free Software<br>Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
@@ -862,7 +866,6 @@ NodeListAction.tooltip=Shows all nodes as a searchable list with filter properti
 NodeShapeAction.bubble.text=&Bubble
 NodeShapeAction.fork.text=&Fork
 NodeUpAction.text=Move node (Sibling up)
-NodeWidthAction.text=Set node width limits
 nonboldify_branch=Unboldify
 nonitalicise_branch=Unitalicise
 normal=Normal
@@ -1281,6 +1284,7 @@ OptionPanel.structured_icon_toolbar=Structured icon toolbar
 OptionPanel.summary=Summary
 OptionPanel.sv=Swedish / svenska
 OptionPanel.text.use_ctrl_key=Use 'Assign short cut' from the Tools menu
+OptionPanel.textalignment=Text Alignment
 OptionPanel.time_for_automatic_save=Time for automatic save
 OptionPanel.time_for_automatic_save.tooltip=<html> time between two consecutive automatic saving actions (in msec): To disable automatic saving set this number to 2000000000.</html>
 OptionPanel.time_for_delayed_selection=Time for delayed selection
@@ -1738,6 +1742,11 @@ summary_not_possible=Can not create summary node for current selection
 SummaryNodeAction.text=Summary node (set/reset)
 svg=SVG
 template_dir=Standard templates
+TextAlignAction.CENTER.text=Centered text
+TextAlignAction.DEFAULT.text=Default
+TextAlignAction.LEFT.text=Left aligned text
+TextAlignAction.RIGHT.text=Right aligned text
+textalignment=Text alignment
 TimeListAction.text=Manage tasks ...
 TimeListAction.tooltip=Shows all scheduled times and the corresponding nodes.
 TimeManagementAction.text=Manage time...
