Squashed release-1.3.16-pre05
commit 511446ceda9dc2986ece9d6ade785c513f8b678b
Author: dpolivaev <dpolivaev>
Date:   Wed Oct 21 19:36:17 2015 +0200

    Fix java 6 issues

commit 6652d584218439cb2e316015b8c7204c1be61cea
Author: dpolivaev <dpolivaev>
Date:   Wed Oct 21 19:13:31 2015 +0200

    Add strings for Lengths.pt

commit b81625e34059d7824a312ec01ecb31132987fa7d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 21 19:32:42 2015 +0200

    Move LengthUnits to org.freeplane.core.ui
    # Conflicts:
    #	freeplane/src/org/freeplane/features/nodestyle/NodeSizeModel.java
    #	freeplane/src/org/freeplane/features/nodestyle/NodeStyleBuilder.java

commit 3c19aa54a40458f988c10f6a410df11b6d573603
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 21 19:29:47 2015 +0200

    Add bubble_vertical_margin quantity property to preferences
    # Conflicts:
    #	freeplane/resources/xml/preferences.xml
    #	freeplane/viewer-resources/translations/Resources_en.properties

commit cce7f71ce10915042e580d627ed5ab3013d37e6a
Author: dpolivaev <dpolivaev>
Date:   Wed Oct 21 19:04:07 2015 +0200

    Add quantity properties to OptionPanelBuilder

commit ac7b6bc06eca5b10ecbad7691cfe05d32754f0cb
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 21 19:23:32 2015 +0200

    Add child gap to StyeEditorPanel and implement StyleCopier for
    LocationModel
    # Conflicts:
    #	freeplane/viewer-resources/translations/Resources_en.properties

commit e3ff723089859607d8310d47d5cee2ad08da27d0
Author: dpolivaev <dpolivaev>
Date:   Wed Oct 21 15:57:07 2015 +0200

    Add child gap to StyeEditorPanel and implement StyleCopier for
    LocationModel

commit a87e9b063a9173cd1c2771d844197b7c0703ed28
Author: dpolivaev <dpolivaev>
Date:   Wed Oct 21 14:49:59 2015 +0200

    Use style chain for obtaining minimal distance between children

commit 836483d5f22e117e67759f1f48e57f0f409d6bd6
Author: dpolivaev <dpolivaev>
Date:   Wed Oct 21 13:15:39 2015 +0200

    Bug fixes in draggi

--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -717,6 +717,7 @@ latexPatternFormat=LaTeX
 LengthUnits.cm=cm
 LengthUnits.in=inch
 LengthUnits.mm=mm
+LengthUnits.pt=pt
 LengthUnits.px=px
 less_than_two_selected_nodes=Bitte mindestens zwei Knoten ausw\u00E4hlen, zwischen denen Verbindungen gezeichnet werden sollen.
 licences=Lizenzen
