--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -677,6 +677,7 @@ latexPatternFormat=LaTeX
 LengthUnits.cm=cm
 LengthUnits.in=in
 LengthUnits.mm=mm
+LengthUnits.pt=pt
 LengthUnits.px=px
 less_than_two_selected_nodes=You have to select at least two nodes to get links.
 license=License: GPL 2 or later
@@ -922,7 +923,9 @@ OptionPanel.backup_file_number=Number of kept backup files
 OptionPanel.Behaviour=Behaviour
 OptionPanel.bezier=Smoothly curved (bezier)
 OptionPanel.bubble=Bubble
-OptionPanel.ca=Catalan, Valencian / Catal\u00e0
+OptionPanel.bubble_vertical_margin=Bubble margin
+OptionPanel.bubble_vertical_margin.tooltip=Vertical space in bubble node margin
+OptionPanel.ca=Catalan, Valencian / Catal\u00E0
 OptionPanel.Cancel=Cancel
 OptionPanel.center_selected_node=Center selected node automatically
 OptionPanel.check_updates_automatically=Check for updates on program start
@@ -1313,6 +1316,8 @@ OptionPanel.validate_invalid_number_format=Invalid standard number format
 OptionPanel.validate_write_without_read=Scripting: consider to add Read/File to Write/File.
 OptionPanel.validation_error=<html><body>Validation error(s):<p><em>{0}</em><p>Please change the preferences to fix the error(s).</body></html>
 OptionPanel.validation_warning=<html><body>Validation warning(s):<p><em>{0}</em></body></html>
+OptionPanel.vertical_child_gap=Child gap
+OptionPanel.vertical_child_gap.tooltip=Vertical distance between child nodes
 OptionPanel.vi=Vietnamese / Ti\u1ebfng Vi\u1ec7t
 OptionPanel.wheel_velocity=Speed
 OptionPanel.wheel_velocity.tooltip=A higher value results in fast mouse wheel move effects on the map.
