Squashed alpha-1.5.0-pre02
commit 8b4f05dd1366f38e831dd0921867239a06929d2c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 28 19:48:06 2015 +0100

    Format translation

commit 37534d0da6437c8c8e24454da754f7f41caaf3a6
Merge: 3c56e6a b568c9f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 28 19:43:50 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 3c56e6a8f114b2359647fd6942551c2dd04c3843
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 28 19:39:31 2015 +0100

    Bug fixes and refactoring for column based edge color
    # Conflicts:
    #	freeplane/src/org/freeplane/features/styles/AutomaticLayoutController.java

commit 44ce95ca17fca0532ce7c80a1f6fd629196d4f07
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 28 19:20:31 2015 +0100

    Rename AutomaticLayout.COLUMN -> COLUMNS

commit e90c40dcf61d0424424f6058fc6f50d78802462f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 28 19:04:54 2015 +0100

    Automatic edge color for column

commit 5df630d5833cb0250d15a8f5f42cdb996680d69a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 27 22:18:54 2015 +0100

    EditStylesAction should change to mapView null before opening style
    dialog because it has its own controller
    # Conflicts:
    #	freeplane/src/org/freeplane/main/mindmapmode/stylemode/AEditStylesAction.java

commit 2e7206b0f1232fc13a38aa074a1c8c6369491db7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 27 20:38:37 2015 +0100

    Hack: Automatic edge color depending on distance to root node

commit 471ca7c051e201dc1d0af429c01b63ab5bc10416
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 27 20:33:19 2015 +0100

    Remove unnecessary code from LogicalStyleController

commit c9e8721d5a0a1c1a591388b270be0cd438f4b037
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 27 20:32:01 2015 +0100

    Add public method to AutomaticLayoutController

commit 467737ed50f4c520e

--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -674,6 +674,11 @@ LatexInsertLatexAction.msg1=<html>\u60A8\u5617\u8A66\u63D2\u5165\u4E00\u500B<i>\
 LatexInsertLatexAction.msg2=<html>\u7E3D\u4E4B\uFF1A<ul><li>\u5728\u7BC0\u9EDE\u6587\u5B57\u4F7F\u7528 "\\latex" \u524D\u7DB4\u6216\u662F</li><li><i>\u6AA2\u8996 -> \u6027\u8CEA\u9762\u677F</i>\uFF0C\u7136\u5F8C<i>\u7BC0\u9EDE\u6838\u5FC3 -> \u683C\u5F0F -> Latex</i></li></ul></html>
 LatexInsertLatexAction.text=(&L)\u65B0\u589E LaTeX \u6578\u5B78\u5F0F...
 latexPatternFormat=LaTeX
+LengthUnits.cm=cm
+LengthUnits.in=in
+LengthUnits.mm=mm
+LengthUnits.pt=pt
+LengthUnits.px=px
 less_than_two_selected_nodes=\u60A8\u5FC5\u9808\u81F3\u5C11\u9078\u53D6\u5169\u500B\u7BC0\u9EDE\u4F86\u5EFA\u7ACB\u9023\u7D50\u3002
 license=\u6388\u6B0A\uFF1AGPL 2 \u6216\u4EE5\u5F8C\u7248\u672C
 license_text=<html>This program is free software; you can redistribute it and/or<br>modify it under the terms of the GNU General Public License<br>as published by the Free Software Foundation; either version 2<br>of the License, or (at your option) any later version.<br><br>This program is distributed in the hope that it will be useful,<br>but WITHOUT ANY WARRANTY; without even the implied warranty of<br>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>GNU General Public License for more details.<br><br>You should have received a copy of the GNU General Public License<br>along with this program; if not, write to the Free Software<br>Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
@@ -918,6 +923,8 @@ OptionPanel.backup_file_number=\u4FDD\u5B58\u7684\u5099\u4EFD\u6A94\u6848\u6578\
 OptionPanel.Behaviour=\u7DE8\u8F2F\u884C\u70BA\u8A2D\u5B9A
 OptionPanel.bezier=\u8C9D\u6C0F\u66F2\u7DDA
 OptionPanel.bubble=\u6C23\u6CE1\u6846
+OptionPanel.bubble_vertical_margin=\u6C23\u6CE1\u908A\u7DE3
+OptionPanel.bubble_vertical_margin.tooltip=\u5728\u6C23\u6CE1\u7BC0\u9EDE\u908A\u7DE3\u7684\u5782\u76F4\u7A7A\u9593
 OptionPanel.ca=Catal\u00E0 (\u52A0\u6CF0\u7F85\u5C3C\u4E9E\u6587 / \u74E6\u502B\u897F\u4E9E\u6587)
 OptionPanel.Cancel=\u53D6\u6D88
 OptionPanel.center_selected_node=\u5C07\u9078\u53D6\u7684\u7BC0\u9EDE\u7F6E\u65BC\u4E2D\u592E
@@ -1280,6 +1287,7 @@ OptionPanel.structured_icon_toolbar=\u7D50\u69CB\u5316\u5C0F\u5716\u793A\u5DE5\u
 OptionPanel.summary=\u6458\u8981
 OptionPanel.sv=Svenska (\u745E\u5178\u6587)
 OptionPanel.text.use_ctrl_key=\u4F7F\u7528\u5DE5\u5177\u9078\u55AE\u4E2D\u7684 '\u6307\u5B9A\u5FEB\u901F\u9375'
+OptionPanel.textalignment=\u6587\u5B57\u5C0D\u9F4A
 OptionPanel.time_for_automatic_save=\u81EA\u52D5\u5132\u5B58\u6642\u9593 (\u6BEB\u79D2, ms)
 OptionPanel.time_for_automatic_save.tooltip=<html>\u76F8\u9130\u5169\u6B21\u81EA\u52D5\u5132\u5B58\u9593\u7684\u6642\u9593\u9593\u9694\uFF0C\u55AE\u4F4D\uFF1A\u6BEB\u79D2 (msec)\u3002\u5982\u4E0D\u81EA\u52D5\u5132\u5B58\u8ACB\u8A2D\u5B9A 2000000000\u3002</html>
 OptionPanel.time_for_delayed_selection=\u5EF6\u9072\u6642\u9593\u8A2D\u5B9A (\u6BEB\u79D2, ms)
@@ -1289,6 +1297,7 @@ OptionPanel.toolTipManager.initialDelay=\u521D\u59CB\u5EF6\u9072\u6642\u9593 (\u
 OptionPanel.toolTipManager.max_tooltip_width=\u7BC0\u9EDE\u63D0\u793A\u5BEC\u5EA6
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>\u7BC0\u9EDE\u63D0\u793A\u5BEC\u5EA6\u7684\u55AE\u4F4D\u662F\u50CF\u7D20\u3002</html>
 OptionPanel.toolTipManager.reshowDelay=\u91CD\u65B0\u986F\u793A\u5EF6\u9072\u6642\u9593 (\u6BEB\u79D2, ms)
+OptionPanel.tr=\u571F\u8033\u5176 / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=\u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430 (\u70CF\u514B\u862D\u6587)
 OptionPanel.undefined_font=\u672A\u5B9A\u7FA9\u7684\u5B57\u578B
 OptionPanel.undo_levels=\u5FA9\u539F\u6B21\u6578
@@ -1307,6 +1316,8 @@ OptionPanel.validate_invalid_number_format=\u7121\u6548\u7684\u6578\u5B57\u683C\
 OptionPanel.validate_write_without_read=Scripting\uFF1A\u8003\u616E\u5C07 Read/File \u52A0\u5230 Write/File\u3002
 OptionPanel.validation_error=<html><body>\u9A57\u8B49\u932F\u8AA4\uFF1A<p><em>{0}</em><p>\u8ACB\u4FEE\u6539\u8A2D\u5B9A\u3002</body></html>
 OptionPanel.validation_warning=<html><body>\u9A57\u6B63\u8B66\u544A\uFF1A<p><em>{0}</em></body></html>
+OptionPanel.vertical_child_gap=\u5B50\u9593\u9694
+OptionPanel.vertical_child_gap.tooltip=\u5728\u5B50\u7BC0\u9EDE\u4E4B\u9593\u7684\u5782\u76F4\u8DDD\u96E2
 OptionPanel.vi=Ti\u1EBFng Vi\u1EC7t (\u8D8A\u5357\u6587)
 OptionPanel.wheel_velocity=\u901F\u5EA6
 OptionPanel.wheel_velocity.tooltip=\u503C\u8D8A\u5927\uFF0C\u6ED1\u9F20\u6EFE\u8F2A\u5728\u5716\u4E0A\u79FB\u52D5\u7684\u6548\u61C9\u8D8A\u5FEB\u3002
@@ -1736,6 +1747,11 @@ summary_not_possible=\u7121\u6CD5\u5C0D\u76EE\u524D\u9078\u53D6\u7684\u5EFA\u7AC
 SummaryNodeAction.text=\u8A2D\u5B9A/\u53D6\u6D88 \u7E3D\u7D50\u7BC0\u9EDE
 svg=SVG (\u53EF\u7E2E\u653E\u5411\u91CF\u5716)
 template_dir=\u6A19\u6E96\u6A23\u7248
+TextAlignAction.CENTER.text=\u6587\u5B57\u5C45\u4E2D
+TextAlignAction.DEFAULT.text=\u9810\u8A2D\u503C
+TextAlignAction.LEFT.text=\u6587\u5B57\u5411\u5DE6\u5C0D\u9F4A
+TextAlignAction.RIGHT.text=\u6587\u5B57\u5411\u53F3\u5C0D\u9F4A
+textalignment=\u6587\u5B57\u5C0D\u9F4A
 TimeListAction.text=\u5217\u51FA\u6642\u9593\u6392\u7A0B ...
 TimeListAction.tooltip=\u986F\u793A\u6240\u6709\u7BC0\u9EDE\u8207\u5176\u76F8\u5C0D\u61C9\u7684\u884C\u7A0B.
 TimeManagementAction.text=\u986F\u793A\u65E5\u66C6...
